# paramnormal

./: .buildinfo  .codeclimate.yml  .coverage  .gitignore  .pre-commit-config.yaml  .travis.yml  .travis_coveragerc  LICENSE  activity-2.py  activity-5.py  activity.html  api.html  check_paramnormal.py  continuous.html  discrete.html  dist.html  fit.html  genindex.html  includeme.html  index.html  objects.inv  paramnormal.html  py-modindex.html  readme.md  readme.rst  requirements.txt  requirements_dev.txt  ruff.toml  search.html  searchindex.js  setup.cfg  setup.py  utils.html
.github/workflows/: black.yml  check-test-coverage.yml  python-publish-pypi.yml  python-publish-testpypi.yml  python-publish.yml  python-runtests-basic.yml  python-runtests-img-comp.yml
_modules/: index.html
_modules/paramnormal/: activity.html  continuous.html  dist.html  fit.html  paramnormal.html  utils.html
_sources/: index.txt
_sources/api/: activity.txt
_sources/tutorial/: activities.txt  fitting.txt  overview.txt
api/: activity-1.py  activity-3.py  activity-4.py  activity.html  paramnormal.html  utils.html
conda.recipe/: meta.yaml
conda.recipe/dev/: meta.yaml
conda.recipe/stable/: meta.yaml
docs/: Makefile  activity.rst  api.rst  conf.py  discrete.rst  dist.rst  fit.rst  index.rst  make.bat  paramnormal.rst  utils.rst
examples/: index.html
paramnormal/: __init__.py  activity.py  continuous.py  dist.py  fit.py  paramnormal.py  process_args.py  utils.py
paramnormal.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tutorial/: activities.html  fitting.html  overview.html
(+31 files in other folders)
