[metadata]
description-file = readme.rst

markers =
    mpl_image_compare

[tool:pytest]
pep8ignore =
    E501
    E131
    check_paramnormal.py ALL
    paramnormal/examples/* ALL
    paramnormal/tests/* E501 E241
    docs/* ALL

[pep8]
max-line-length = 100

[isort]
profile=black
src_paths=paramnormal